# zeabur-django-serverless-demo

./: README.md  pyproject.toml  requirements.txt
config/: api.py  settings.py  urls.py
